all-in-one-sample-app-with-rate/06-svc-pytbak-rate.yaml
apiVersion: v1
kind: Service
metadata:
  name: pytbak-svc-rate
  namespace: pytbak
  labels:
    app: pytbak
spec:
  ports:
  - port: 5002
    protocol: TCP
  selector:
    app: pytbak
